--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,13 @@ header {
   align-items: center;
 }
 
+@media (min-width: 768px)
+{
+  header {
+    height: 3rem;
+  } 
+}
+
 nav {
   width: 100%;
   display: flex;
@@ -55,3 +62,64 @@ nav .switchTheme p {
   margin: 0 0.5rem;
 }
 
+.search {
+  width: 90vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem auto;
+}
+
+.search .inputBox {
+  max-width: 500px;
+  width: 100%;
+}
+
+.search .inputBox .input {
+  width: 100%;
+  height: 3rem;
+  padding: 0 1rem;
+  border-radius: 5;
+
+}
+
+.inputBox .input input {
+  border: none;
+  height: 100%;
+  margin: 0 1rem;
+  font-size: 1.2rem;
+}
+
+.inputBox .input input:focus {
+  outline: none;
+  border: none;
+}
+
+.filterBox {
+  width: 50%;
+  align-self: flex-start;
+}
+
+.filterBox select {
+  width: 100%;
+  max-width: 300px;
+  font-size: 1rem;
+  padding: 0 1rem;
+  height: 3rem;
+  border: none;
+  margin: 1rem 0;
+}
+
+@media (min-width: 768px)
+{
+  .search {
+    width: 90vw;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .filterBox {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
