--- a/src/styles.css
+++ b/src/styles.css
@@ -25,8 +25,12 @@ body, main {
   height: auto;
 }
 
+main {
+  border: 5px solid green;
+}
+
 header {
-  width: 100vw;
+  width: 100%;
   height: 7rem;
   display: flex;
   align-items: center;
@@ -138,11 +142,10 @@ nav .switchTheme p {
 
 /* Countries */
 .countries-grid {
-  max-width: 90vw !important;
+  max-width: 90vw;
   margin: 1rem auto;
   display: grid;
-  grid-template-columns: repeat(4, minmax(250px, 1fr));
-  grid-auto-columns: auto;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2rem;
 }
 
