--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@
 
 body, main {
   width: 100vw;
-  height: auto;
+  min-height: 100vh;
 }
 
 main {
@@ -145,7 +145,7 @@ nav .switchTheme p {
   max-width: 90vw;
   margin: 1rem auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
 }
 
@@ -176,4 +176,52 @@ nav .switchTheme p {
 
 .country-content h2 {
   margin: 1rem 0;
+}
+
+
+/* Single Country */
+.btn-container-sr {
+  width: 100%;
+  margin: 2rem 0;
+  padding: 2rem;
+}
+
+.btn-container-sr button {
+  width: 6rem;
+  height: 2rem;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 1rem;
+  text-transform: capitalize;
+  border: none;
+  outline: none;
+}
+
+.single-country-container {
+  width: 100%;
+  height: auto;
+}
+
+.single-country-container .flag-container {
+  width: 100%;
+  padding: 0 2rem;
+  max-width: 500px;
+}
+
+.single-country-container .flag-container img{
+  width: 100%;
+}
+
+.single-country-container .text-container {
+  width: 100%;
+  margin: 1rem 0;
+  padding: 2rem;
+}
+
+.grid-2 {
+  width: 1rem;
+  height: 1rem;
+  background-color: red;
 }
